--- a/src/component/QuestionPage/AnswerBtn.module.css
+++ b/src/component/QuestionPage/AnswerBtn.module.css
@@ -1,12 +1,18 @@
 .answerButton {
-  height: 3em;
-  width: 15em;
+  height: 5em;
+  width: 20em;
   border: 0;
-  margin: 0 1em 0 1em;
+  margin: 0 1em 1em 1em;
   background-color: burlywood;
 }
 
 .answerButton:hover {
   color: red;
   background-color: purple;
+}
+
+.answerImg {
+  height: 8em;
+  width: 15em;
+  margin: 0 1em 1em 1em;
 }
