--- a/src/component/QuestionPage/Question.module.css
+++ b/src/component/QuestionPage/Question.module.css
@@ -1,9 +1,9 @@
 .question {
-  margin: 10%;
+  margin: 8%;
 }
 
 .questionImg {
-  width: 30vw;
-  height: 30vh;
-  margin: 10%;
+  width: 40vw;
+  height: 40vh;
+  margin: 8% 0 6% 0;
 }
