--- a/src/component/QuestionPage/QuestionPage.module.css
+++ b/src/component/QuestionPage/QuestionPage.module.css
@@ -7,7 +7,13 @@
   display: flex;
   padding: 0;
   margin: 0;
-  height: 100%;
+  height: 100vh;
+  /* background-color: black; */
+  background-image: url(../../Img/bg.png);
+  background-color: #c4f4fe;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 90%;
 }
 
 .pageFlex {
@@ -21,7 +27,6 @@
 .questionBox {
   width: 100%;
   height: 100vh;
-  background-color: aquamarine;
   display: none;
   flex-direction: column;
   align-items: center;
@@ -38,6 +43,8 @@
 
 .lists {
   padding: 0;
-  height: 30px;
-  margin: 3em;
+  height: 100vh;
+  width: 80%;
+  text-align: center;
+  margin-top: 1vh;
 }
